@@ -1,4 +1,5 @@
 0.02
+ - Change 'css_pager' parameter to required.
  - Fix test dependencies.
 
 0.01 2022-09-19T19:03:10+02:00
